Fix truncate for the o-card.

--- a/assets/scss/components/cards/main.scss
+++ b/assets/scss/components/cards/main.scss
@@ -48,7 +48,7 @@ $alphaville-card--firstft__color--heading: oColorsGetPaletteColor('grey-tint3');
 }
 
 .alphaville-card__standfirst-truncate {
-	max-height: 54px;
+	max-height: 55px;
 	overflow: hidden;
 }
 
